--- a/css/cleaning.css
+++ b/css/cleaning.css
@@ -244,7 +244,7 @@ body {
 .reduest_free_bg_img {
     height: 328px;
     background: #000000;
-    background: url(../img/quotebgd.png);
+    background: url('../images/img/quotebgd.png');
     background-position: center;
     background-size: cover;
 }
@@ -422,12 +422,12 @@ body {
     border:none !important;
     background: transparent !important;
 }
-.mainSearch{
+/* .mainSearch{
     background: #1E201F;
 opacity: 0.7;
 border: 2px solid #FFFFFF;
 border-radius: 20px;
-}
+} */
 .look{
     border-right: 2px solid #FFFFFF;
 }
