--- a/css/cleaning.css
+++ b/css/cleaning.css
@@ -463,7 +463,10 @@ font-weight: 600;
     .communicat_with_us {
         flex-direction: column;
     }
-
+    .cicle_bg_img {
+        width: 400px;
+        top: 45px;
+    }
   
 }
 
@@ -498,7 +501,7 @@ font-weight: 600;
 
     .cicle_bg_img {
         width: 200px;
-        top: -50px;
+        top: 45px;
     }
 }
 @media screen and (max-width:768px){
@@ -526,8 +529,10 @@ font-weight: 600;
  display: flex;
  flex-direction: column;
 }
-.searchBox{
- 
+
+.cicle_bg_img {
+    width: 400px;
+    top: 45px;
 }
 
 }
