--- a/css/style2.css
+++ b/css/style2.css
@@ -38,19 +38,19 @@ body {
 }
 
 .requestBtn {
-    border-radius: 0px;
-    background-color: #9947E2;
+    border-radius: 0px !important;
+    background-color: #9947E2 !important;
     /* width: 224px; */
-    height: fit-content;
+    height: fit-content !important;
     position: absolute;
     top: 0;
     right: -10px;
     font-family: 'Futura Md BT';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #fff;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    font-size: 16px !important;
+    line-height: 19px !important;
+    color: #fff !important;
 }
 
 .requestBtn:hover {
