--- a/css/cleaning.css
+++ b/css/cleaning.css
@@ -129,7 +129,7 @@ body {
 
 .feature_cat_text {
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 22px;
     letter-spacing: 0.1em;
 }
@@ -196,7 +196,7 @@ body {
 }
 
 .gallery_card {
-    height: 364px;
+ 
     background-color: #B21490;
     border-radius: 10px;
 }
@@ -204,13 +204,17 @@ body {
 .gallery_card1 {
     background-color: #202D35;
     border-radius: 10px;
-    height: 364px;
+  
 }
 
 .gallery_img {
-    width: 238px;
-    height: 255px;
+   width: 90%;
+  
     border-radius: 10px;
+}
+
+.gallery_img img{
+        padding-top: 20px;
 }
 
 .gallery_text {
@@ -242,7 +246,7 @@ body {
 
 /* ========= Request a free Quote  Start ======= */
 .reduest_free_bg_img {
-    height: 328px;
+ 
     background: #000000;
     background: url('../images/img/quotebgd.png');
     background-position: center;
@@ -419,8 +423,11 @@ body {
     width: 82%;
 }
 .sInp{
-    border:none !important;
+    
     background: transparent !important;
+}
+.sInp::placeholder{
+    
 }
 /* .mainSearch{
     background: #1E201F;
@@ -428,9 +435,9 @@ opacity: 0.7;
 border: 2px solid #FFFFFF;
 border-radius: 20px;
 } */
-.look{
+/* .look{
     border-right: 2px solid #FFFFFF;
-}
+} */
 .sBtn{
     background: #9947E2 !important;
 border-radius: 15px !important;
@@ -451,18 +458,10 @@ font-weight: 600;
         height: 300px;
     }
 
-    .gallery_card1 {
-        height: 300px;
-    }
+   
 
-    .gallery_img {
-        width: 200px;
-        height: 200px;
-    }
+  
 
-    .communicat_with_us {
-        flex-direction: column;
-    }
 
   
 }
@@ -500,6 +499,9 @@ font-weight: 600;
         width: 200px;
         top: -50px;
     }
+
+    
+   
 }
 @media screen and (max-width:768px){
 .your_location{
@@ -518,6 +520,12 @@ font-weight: 600;
     border-radius: 20px;  
     margin-bottom: 10px; 
 }
+ .communicat_with_us {
+        flex-direction: column;
+    }
+    .contact_us_card{
+        width: 100%;
+    }
 .you_looking_text{
     width: 100%;
 }
@@ -530,4 +538,18 @@ font-weight: 600;
  
 }
 
+}
+
+
+
+.complex-text{
+    display: none;
+}
+ 
+
+
+.a_tag_img a:hover .complex-text {
+  display: block;
+  color: White !important;
+ 
 }
