--- a/css/cleaning.css
+++ b/css/cleaning.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@font-face {
-    font-family: Futura Hv BT
-    ; /* The name you want to assign to your font */
-    src: url('../fonts/futura-hv-bt/FutuHv.ttf') format('truetype'); /* URL to your font file */
-  }
+/* @font-face {
+    font-family: 'Futura Hv BT';
+    src: url('../Futura-Book-Font/FuturaRegular.otf') format('truetype') !important;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+    /* font-family: 'Futura Hv BT'; */
+    font-family: 'Montserrat', sans-serif !important;
+}
+
 body {
     background: #161817 !important;
     color: rgba(255, 255, 255, 0.87) !important;
-}
-
-* {
-    font-family: 'Futura Bk BT' !important;
-    font-style: normal !important;
 }
 
 /* ============== homepage start =================  */
@@ -116,7 +117,7 @@ body {
 /* ============== homepage End =================  */
 
 /* ========= Feature Categories Start ======= */
-.back_forword_btn{
+.back_forword_btn {
     display: flex;
     justify-content: end;
 }
@@ -147,7 +148,7 @@ body {
 .a_tag_img a:after {
     content: '';
     width: 100%;
-    height:100%;
+    height: 100%;
     position: absolute;
     top: 0px;
     opacity: 0.3;
@@ -196,7 +197,7 @@ body {
 }
 
 .gallery_card {
- 
+
     background-color: #B21490;
     border-radius: 10px;
 }
@@ -204,17 +205,17 @@ body {
 .gallery_card1 {
     background-color: #202D35;
     border-radius: 10px;
-  
+
 }
 
 .gallery_img {
-   width: 90%;
-  
+    width: 90%;
+
     border-radius: 10px;
 }
 
-.gallery_img img{
-        padding-top: 20px;
+.gallery_img img {
+    padding-top: 20px;
 }
 
 .gallery_text {
@@ -246,7 +247,7 @@ body {
 
 /* ========= Request a free Quote  Start ======= */
 .reduest_free_bg_img {
- 
+
     background: #000000;
     background: url('../images/img/quotebgd.png');
     background-position: center;
@@ -290,6 +291,12 @@ body {
     background: #B21490;
     color: rgba(255, 255, 255, 0.87);
     transition: 0.3s;
+}
+
+.bagWhite {
+    background-color: #FFFFFF !important;
+    color: #000000 !important;
+    width: 100% !important;
 }
 
 .contact_us_bgclr {
@@ -417,18 +424,20 @@ body {
     text-align: center;
     letter-spacing: 0.05em;
 }
-.searchBox{
+
+.searchBox {
     position: absolute;
     top: 469px;
     width: 82%;
 }
-.sInp{
-    
+
+.sInp {
+
     background: transparent !important;
 }
-.sInp::placeholder{
-    
-}
+
+.sInp::placeholder {}
+
 /* .mainSearch{
     background: #1E201F;
 opacity: 0.7;
@@ -438,11 +447,11 @@ border-radius: 20px;
 /* .look{
     border-right: 2px solid #FFFFFF;
 } */
-.sBtn{
+.sBtn {
     background: #9947E2 !important;
-border-radius: 15px !important;
-color: #fff !important;
-font-weight: 600;
+    border-radius: 15px !important;
+    color: #fff !important;
+    font-weight: 600;
 }
 
 /* ========= About Us End ======= */
@@ -458,25 +467,26 @@ font-weight: 600;
         height: 300px;
     }
 
-   
 
-  
 
- 
+
+
+
     .communicat_with_us {
         flex-direction: column;
     }
+
     .cicle_bg_img {
         width: 400px;
         top: 45px;
     }
- 
+
 }
 
 @media screen and (max-width:520px) {
 
     .your_location {
-      
+
         width: 100%;
         background: #1E201F;
         opacity: 0.7;
@@ -485,9 +495,6 @@ font-weight: 600;
         top: 0px;
     }
 
-    .feature_cat {
-        margin-top: 200px;
-    }
 
     .search_btn {
         width: auto;
@@ -507,58 +514,65 @@ font-weight: 600;
         top: 45px;
     }
 
-    
-   
+
+
 }
-@media screen and (max-width:768px){
-.your_location{
-    border:none;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-.lft_brdr {
-    border: 1px solid #fff;
-    border-radius: 20px;
-}
-.lInput {
-    border: 1px solid #fff;
-    border-radius: 20px;  
-    margin-bottom: 10px; 
-}
- .communicat_with_us {
+
+@media screen and (max-width:768px) {
+    .your_location {
+        border: none;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .lft_brdr {
+        border: 1px solid #fff;
+        border-radius: 20px;
+    }
+
+    .lInput {
+        border: 1px solid #fff;
+        border-radius: 20px;
+        margin-bottom: 10px;
+    }
+
+    .communicat_with_us {
         flex-direction: column;
     }
-    .contact_us_card{
+
+    .contact_us_card {
         width: 100%;
     }
-.you_looking_text{
-    width: 100%;
+
+    .you_looking_text {
+        width: 100%;
+    }
+
+    .lft_brdr {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cicle_bg_img {
+        width: 400px;
+        top: 45px;
+    }
+
 }
-.lft_brdr{
- height: 100%;
- display: flex;
- flex-direction: column;
-}
-
-.cicle_bg_img {
-    width: 400px;
-    top: 45px;
-}
-
-}
 
 
 
-.complex-text{
+.complex-text {
     display: none;
 }
- 
+
 
 
 .a_tag_img a:hover .complex-text {
-  display: block;
-  color: White !important;
- 
+    display: block;
+    color: White !important;
+
 }
