--- a/css/style1.css
+++ b/css/style1.css
@@ -18,6 +18,12 @@
     --color-5: #202D35;
     --color-6: #9947E2;
     --color-7: #ECECEC;
+    --color-8: #FC466B;
+    --color-9: #1E201F;
+    --color-10: #161817;
+    --color-11: #575757;
+    --color-12: #3531b1;
+    --color-13: #4072EA;
 }
 
 body {
@@ -57,7 +63,7 @@ body {
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0.1em;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .banner__1__content h1 {
@@ -76,19 +82,19 @@ body {
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.05em;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #9947E2;
+    color: var(--color-1);
+    background-color: var(--color-6);
     padding: 20px 40px;
     gap: 10px;
     border-radius: 10px;
-    border: 1px solid #9947E2;
+    border: 1px solid var(--color-6);
     transition: all .3s ease-in-out;
 }
 
 .banner__button:hover {
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #FC466B;
-    border: 1px solid #FC466B;
+    color: var(--color-1);
+    background-color: var(--color-8);
+    border: 1px solid var(--color-8);
 }
 
 .banner__1__img {
@@ -117,24 +123,24 @@ body {
     width: 50%;
     height: 30px;
     padding: 30px 50px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-3);
     opacity: 0.8;
-    background-color: #1E201F;
+    background-color: var(--color-9);
     border-radius: 20px 0 0 20px;
 }
 
 .search-input::placeholder {
     font-weight: 400;
     font-size: 18px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .location-input {
     width: 55%;
     height: 30px;
     padding: 30px 87px;
-    border: 1px solid #ccc;
-    background-color: #1E201F;
+    border: 1px solid var(--color-3);
+    background-color: var(--color-9);
     opacity: 0.8;
     border-radius: 0 20px 20px 0;
     /* margin-right: 10px; */
@@ -145,7 +151,7 @@ body {
     font-weight: 400;
     font-size: 18px;
     /* line-height: 22px; */
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .location__icon {
@@ -155,16 +161,16 @@ body {
     font-weight: 400;
     font-size: 18px;
     /* line-height: 22px; */
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
     z-index: 1;
 }
 
 .location__icon i {
-    color: #ECECEC !important;
+    color: var(--color-7) !important;
 }
 
 .search-button {
-    color: white;
+    color: var(--color-1);
     border: none;
     cursor: pointer;
     position: absolute;
@@ -173,31 +179,31 @@ body {
     justify-content: center;
     align-items: center;
     padding: 10px 40px;
-    background: #9947E2;
+    background: var(--color-6);
     border-radius: 15px;
     transition: all .3s ease-in-out;
 }
 
 .search-button:hover {
-    color: white;
-    background: #FC466B;
+    color: var(--color-1);
+    background: var(--color-8);
 
 }
 
 /* --------------------------------FOOTER-------------------------- */
 .footer__bg {
-    background-color: #161817;
+    background-color: var(--color-10);
     /* margin-top: 12rem; */
 }
 
 .footer__col h6 {
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
     font-weight: 400;
     font-size: 20px;
 }
 
 .footer__col p {
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
     font-weight: 400;
     font-size: 18px;
     line-height: 30px;
@@ -208,8 +214,8 @@ body {
 }
 
 .website__logo {
-    background-color: #ECECEC;
-    color: rgba(255, 255, 255, 0.57);
+    background-color: var(--color-7);
+    color: var(--color-2);
     opacity: 0.5;
 }
 
@@ -223,25 +229,25 @@ body {
 }
 
 .footer__button {
-    background: #9947E2;
+    background: var(--color-6);
     border-radius: 10px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
     font-weight: 400;
     font-size: 14px;
 }
 
 .footer__col a:hover {
-    background: rgba(255, 255, 255, 0.87) !important;
-    color: #9947E2 !important;
+    background: var(--color-1) !important;
+    color: var(--color-6) !important;
 }
 
 .footer__col3 ul li a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .footer__col3 ul li a:hover {
-    color: #9947E2 !important;
+    color: var(--color-6) !important;
     background: none !important;
 }
 
@@ -258,7 +264,7 @@ body {
 }
 
 .footer__col3 h6 {
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
     font-weight: 400;
     font-size: 20px;
 }
@@ -269,12 +275,12 @@ body {
 }
 
 .footer__social i {
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-1);
     font-size: 20px;
 }
 
 .footer__social i:hover {
-    color: #9947E2;
+    color: var(--color-6);
 }
 
 .footer__row__2 ul {
@@ -289,17 +295,17 @@ body {
 
 .footer__row__2 ul li a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .footer__row__2 {
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
     display: flex;
     justify-content: center;
 }
 
 hr {
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 @media (min-width: 320px) and (max-width: 515px) {
@@ -308,7 +314,7 @@ hr {
     }
 
     .footer__row__2 ul {
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
         display: flex;
         flex-direction: column;
         /* justify-content: left; */
@@ -329,68 +335,68 @@ hr {
     text-align: center;
     font-weight: 400;
     font-size: 30px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .section__heading p {
     text-align: center;
     font-weight: 400;
     font-size: 18px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .form__check {
     border-width: 1px 0px 0px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__11 {
     border-width: 1px 1px 0px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__12 {
     border-width: 1px 0px 1px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__14 {
     border-width: 0px 0px 1px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__15 {
     border-width: 0px 1px 1px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__13 {
     border-width: 1px 1px 1px 1px;
     border-style: solid;
-    border-color: #575757;
+    border-color: var(--color-11);
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__check__input[type=checkbox] {
@@ -398,19 +404,19 @@ hr {
 }
 
 .form__check__input:focus {
-    border-color: white;
+    border-color: var(--color-3);
     outline: 0;
     box-shadow: none;
 }
 
 .form__check__input:checked {
-    background-color: white;
-    border-color: white;
+    background-color: var(--color-3);
+    border-color: var(--color-3);
 }
 
 .form__check__input {
-    background-color: #1e1d1d;
-    border: 1.5px solid rgba(255, 255, 255, 0.38);
+    background-color: var(--color-9);
+    border: 1.5px solid var(--color-2);
 }
 
 .form-check-input:checked[type=checkbox] {
@@ -420,21 +426,21 @@ hr {
 .section__heading__2 h3 {
     font-weight: 400;
     font-size: 20px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .section__heading__2 span {
     font-weight: 400;
     font-size: 20px;
-    color: #3531b1 !important;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-12) !important;
+    color: var(--color-1);
 }
 
 .form___select {
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
-    background: #161817;
+    color: var(--color-1);
+    background: var(--color-10);
     border-radius: 10px;
     border: none;
     padding: 20px;
@@ -445,7 +451,7 @@ hr {
 }
 
 .form___select:focus {
-    border-color: #161817;
+    border-color: var(--color-10);
     outline: 0;
     box-shadow: none;
 }
@@ -457,16 +463,16 @@ hr {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: rgba(255, 255, 255, 0.57);
-    background-color: #161817;
+    color: var(--color-2);
+    background-color: var(--color-10);
     border: none;
     border-radius: 0.25rem;
 }
 
 .form-control:focus {
-    color: rgba(255, 255, 255, 0.57);
-    background-color: #161817;
-    border-color: #161817;
+    color: var(--color-2);
+    background-color: var(--color-10);
+    border-color: var(--color-10);
     outline: 0;
     box-shadow: none;
 }
@@ -474,14 +480,14 @@ hr {
 .section__heading__3 {
     font-weight: 400;
     font-size: 30px;
-    color: rgba(255, 255, 255, 0.87);
+    color: var(--color-1);
 }
 
 .form___select {
     font-weight: 400;
     font-size: 16px;
-    color: rgba(255, 255, 255, 0.57);
-    background: #161817;
+    color: var(--color-2);
+    background: var(--color-10);
     border-radius: 10px;
     border: none;
     padding: 20px;
@@ -498,27 +504,27 @@ hr {
 }
 
 .form__btn__1 {
-    background: #9947E2;
+    background: var(--color-6);
     border-radius: 10px;
     padding: 10px 30px;
-    border-color: #9947E2;
+    border-color: var(--color-6);
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.05em;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 .form__btn__2 {
-    background: #4072EA;
+    background: var(--color-13);
     border-radius: 10px;
     padding: 10px 25px;
-    border-color: #4072EA;
+    border-color: var(--color-13);
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.05em;
-    color: rgba(255, 255, 255, 0.57);
+    color: var(--color-2);
 }
 
 
@@ -534,55 +540,55 @@ hr {
     .form__check {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 
     .form__check__11 {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 
     .form__check__12 {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 
     .form__check__13 {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 
     .form__check__14 {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 
     .form__check__15 {
         border-width: 1px 1px 1px 1px;
         border-style: solid;
-        border-color: #575757;
+        border-color: var(--color-11);
         font-weight: 400;
         font-size: 16px;
-        color: rgba(255, 255, 255, 0.57);
+        color: var(--color-2);
     }
 }
 
@@ -677,9 +683,9 @@ hr {
         width: 100%;
         height: 30px;
         padding: 30px 50px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--color-3);
         opacity: 0.8;
-        background-color: #1E201F;
+        background-color: var(--color-9);
         border-radius: 20px;
         margin-bottom: 1.5rem;
     }
@@ -688,8 +694,8 @@ hr {
         width: 100%;
         height: 30px;
         padding: 30px 87px;
-        border: 1px solid #ccc;
-        background-color: #1E201F;
+        border: 1px solid var(--color-3);
+        background-color: var(--color-9);
         opacity: 0.8;
         border-radius: 20px;
         /* margin-right: 10px; */
@@ -697,7 +703,7 @@ hr {
     }
 
     .search-button {
-        color: white;
+        color: var(--color-3);
         border: none;
         cursor: pointer;
         position: absolute;
@@ -707,7 +713,7 @@ hr {
         justify-content: center;
         align-items: center;
         padding: 10px 40px;
-        background: #9947E2;
+        background: var(--color-6);
         border-radius: 15px;
         transition: all .3s ease-in-out;
     }
@@ -720,7 +726,7 @@ hr {
         font-weight: 400;
         font-size: 18px;
         /* line-height: 22px; */
-        color: rgba(255, 255, 255, 0.87);
+        color: var(--color-1);
         z-index: 1;
     }
 }
@@ -767,9 +773,9 @@ hr {
         width: 100%;
         height: 30px;
         padding: 30px 50px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--color-3);
         opacity: 0.8;
-        background-color: #1E201F;
+        background-color: var(--color-9);
         border-radius: 20px;
         margin-bottom: 1.5rem;
     }
@@ -778,8 +784,8 @@ hr {
         width: 100%;
         height: 30px;
         padding: 30px 87px;
-        border: 1px solid #ccc;
-        background-color: #1E201F;
+        border: 1px solid var(--color-3);
+        background-color: var(--color-9);
         opacity: 0.8;
         border-radius: 20px;
         /* margin-right: 10px; */
@@ -787,7 +793,7 @@ hr {
     }
 
     .search-button {
-        color: white;
+        color: var(--color-3);
         border: none;
         cursor: pointer;
         position: absolute;
@@ -797,7 +803,7 @@ hr {
         justify-content: center;
         align-items: center;
         padding: 10px 40px;
-        background: #9947E2;
+        background: var(--color-6);
         border-radius: 15px;
         transition: all .3s ease-in-out;
     }
@@ -810,7 +816,7 @@ hr {
         font-weight: 400;
         font-size: 18px;
         /* line-height: 22px; */
-        color: rgba(255, 255, 255, 0.87);
+        color: var(--color-1);
         z-index: 1;
     }
 }
