--- a/css/cleaning.css
+++ b/css/cleaning.css
@@ -201,18 +201,27 @@ body {
 .a_tag_img a:hover:after {
     background-color: var(--color-4);
     transition: 0.3s;
+    /* z-index: -1000; */
     color: var(--color-1) !important;
 }
 
 .feature_card {
     border-radius: 10px;
     position: relative;
+    background-color: var(--color-10);
+    opacity: 0.6;
 }
 
 .img_icon_div {
-    width: 120px;
-    height: 120px;
+    background-image: url(/images/img/icon2.png);
+    background-position: center;
+    background-size: cover;
+    width: 30%;
+    height: 100%;
+    /* height: 170px; */
 }
+
+
 
 .card_text {
     font-weight: 400;
@@ -246,23 +255,25 @@ body {
 .gallery_card1 {
     background-color: var(--color-5);
     border-radius: 10px;
+    padding: 25px;
 
 }
 
 .gallery_img {
-    width: 90%;
-
+    width: 100%;
     border-radius: 10px;
 }
 
 .gallery_img img {
-    padding-top: 20px;
+    /* padding-top: 20px; */
+    width: 100% !important;
 }
 
 .gallery_text {
     font-weight: 400;
     font-size: 20px;
     letter-spacing: 0.05em;
+    margin-bottom: 0 !important;
 }
 
 .view_all_btn {
@@ -270,19 +281,25 @@ body {
     font-size: 16px;
     letter-spacing: 0.1em;
     padding: 15px 30px;
-    background: var(--color-4);
+    background: var(--color-6);
     color: var(--color-1);
     border-radius: 10px;
     border: none;
     cursor: pointer;
+    transition: all .3s ease-in-out;
 }
 
-.all_btn:hover {
+.view_all_btn:hover {
+    background: var(--color-4) !important;
+    color: var(--color-1);
+}
+
+/* .all_btn:hover {
     background-color: var(--color-4);
     color: var(--color-1);
     transition: 0.3s;
 
-}
+} */
 
 /* ========= Gallery Services End ======= */
 
@@ -293,6 +310,7 @@ body {
     background: url('../images/img/quotebgd.png');
     background-position: center;
     background-size: cover;
+    height: 300px;
 }
 
 .request_free_text {
@@ -308,11 +326,16 @@ body {
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.1em;
-    color: var(--color-1);
+    color: var(--color-10);
     border-radius: 10px;
     padding: 15px 30px;
     border: none;
+    transition: all .3s ease-in-out;
+}
 
+.free_quote_btn:hover {
+    background: var(--color-4);
+    color: var(--color-3);
 }
 
 /* ========= Request a free Quote  End ======= */
@@ -355,33 +378,37 @@ body {
     font-size: 18px;
     line-height: 30px;
     letter-spacing: 0.05em;
+    color: var(--color-2);
 }
 
 .icon_styling {
-    width: 54px;
-    height: 54px;
+    width: 20%;
+}
+
+.icon_styling img {
+    width: 85%;
 }
 
 .contact_card_title {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-}
-
-.Contact_card_text {
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
 }
 
+.Contact_card_text {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 22px;
+}
+
 .contact_us_card {
-    width: 279px;
-    height: 100px;
+    /* width: 325px;
+    height: 100px; */
     background: var(--color-6);
     border-radius: 10px;
     display: flex;
     align-items: center;
-    padding: 0px 8px;
+    padding: 15px;
 }
 
 /* ========= Contact Us End ======= */
@@ -508,13 +535,8 @@ border-radius: 20px;
         height: 300px;
     }
 
-
-
-
-
-
     .communicat_with_us {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .cicle_bg_img {
@@ -536,7 +558,6 @@ border-radius: 20px;
         top: 0px;
     }
 
-
     .search_btn {
         width: auto;
         height: auto;
@@ -554,8 +575,6 @@ border-radius: 20px;
         width: 200px;
         top: 45px;
     }
-
-
 
 }
 
@@ -584,7 +603,7 @@ border-radius: 20px;
     }
 
     .contact_us_card {
-        width: 100%;
+        /* width: 100%; */
     }
 
     .you_looking_text {
@@ -604,16 +623,56 @@ border-radius: 20px;
 
 }
 
-
-
 .complex-text {
     display: none;
 }
-
-
 
 .a_tag_img a:hover .complex-text {
     display: block;
     color: var(--color-3) !important;
 
 }
+
+/* .card__card {
+    background-color: var(--color-6);
+    transition: all .3s ease-in-out;
+}
+
+.card__card:hover {
+    background-color: var(--color-4);
+}
+
+.card__card__img {
+    width: 100%;
+    display: flex;
+}
+
+.card__card__img img {
+    width: 70%;
+    margin: 10px auto;
+
+}
+
+.card__body {
+    margin: 10px auto;
+}
+
+.card__body h5 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--color-1);
+    text-decoration: none;
+}
+
+.card__body p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--color-1);
+    text-decoration: none;
+}
+
+.anchor__card {
+    text-decoration: none;
+} */
