--- a/css/style1.css
+++ b/css/style1.css
@@ -32,6 +32,10 @@ body {
 
 /* Banner 1 Background Image */
 
+.mb-6 {
+    margin-bottom: 5rem;
+}
+
 .index__bg__img {
     background-image: url(/images/11.png);
     background-repeat: no-repeat;
@@ -49,10 +53,10 @@ body {
     position: relative;
     z-index: 1;
 } */
-.jomarzi {
+/* .jomarzi {
     margin-top: -115px;
     margin-bottom: 60px;
-}
+} */
 
 .banner__1__content {
     margin-top: 10rem;
@@ -120,9 +124,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: -175px auto;
+    /* margin: -175px auto; */
     z-index: 1;
     position: relative;
+    margin-top: -24rem;
 }
 
 .search-input {
@@ -192,7 +197,7 @@ body {
 
 .search-button:hover {
     color: var(--color-1);
-    background: var(--color-8);
+    background: var(--color-4);
 
 }
 
@@ -610,7 +615,8 @@ hr {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: -160px auto;
+        /* margin: -160px auto; */
+        margin-top: -22rem;
     }
 
     .banner__1__content {
@@ -638,8 +644,9 @@ hr {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: -153px auto;
+        /* margin: -153px auto; */
         position: absolute;
+        margin-top: -12rem;
     }
 
     .banner__1__content {
@@ -677,7 +684,8 @@ hr {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: -10px auto;
+        /* margin: -10px auto; */
+        margin-top: -3rem;
     }
 
     .banner__1__content {
@@ -758,6 +766,10 @@ hr {
         color: var(--color-1);
         z-index: 1;
     }
+
+    .feature_cat {
+        margin-top: 5rem;
+    }
 }
 
 @media (min-width: 320px) and (max-width: 524px) {
@@ -767,7 +779,8 @@ hr {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: -10px auto;
+        /* margin: -10px auto; */
+        margin-top: -3rem;
     }
 
     .banner__1__content {
@@ -847,5 +860,9 @@ hr {
         /* line-height: 22px; */
         color: var(--color-1);
         z-index: 1;
+    }
+
+    .feature_cat {
+        margin-top: 5rem;
     }
 }
