--- a/css/style2.css
+++ b/css/style2.css
@@ -295,6 +295,9 @@ body {
 .contactBg {
     background: url('../images/contactbg.png');
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 400px;
 }
 
 .fos8 {
