--- a/css/style1.css
+++ b/css/style1.css
@@ -245,6 +245,7 @@ body {
     color: var(--color-1);
     font-weight: 400;
     font-size: 14px;
+    transition: all .3s ease-in-out;
 }
 
 .footer__col a:hover {
